[gd_scene load_steps=2 format=3 uid="uid://jlrql8xe1gm5"]

[ext_resource type="Script" uid="uid://c8tqrlukobe2l" path="res://Assets/Nodes/UI/active_hand_control__ui.gd" id="1_m485r"]

[node name="ActiveHandControl__UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m485r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.937
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -141.68
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 40

[node name="Controls" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 21

[node name="Stay_btn" type="Button" parent="VBoxContainer/MarginContainer/Controls"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "Stay
"

[node name="Hit_btn" type="Button" parent="VBoxContainer/MarginContainer/Controls"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "Hit
"

[connection signal="pressed" from="VBoxContainer/MarginContainer/Controls/Hit_btn" to="." method="_on_hit_btn_pressed"]
